fix spacing error on layout

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-/** {
-  border: 1px solid blue;
-}*/
+* {
+  outline: 1px solid blue;
+}
 
 .App {
   text-align: center;
@@ -96,6 +96,7 @@
 
 .boot-container {
   margin-top: 1%;
+  height: 200px;
 }
 
 .boot-name {
